--- a/app/views/lis/8/hospital.html
+++ b/app/views/lis/8/hospital.html
@@ -16,7 +16,7 @@
         Are {{partnerortext}} in hospital?
       </h1>
   
-      <form action="" method="get" class="form">
+      <form action="hospital2-handler" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
@@ -38,8 +38,7 @@
 
         {{
           form_macros.button({
-            label: 'Next',
-            href : 'savings'
+            label: 'Next'
           })
         }}
 
