--- a/app/views/lis/8/lis-home.html
+++ b/app/views/lis/8/lis-home.html
@@ -21,10 +21,10 @@
             <td><span id="about_you_status" class="notstarted-text">{{aboutYouStatus}}</span> 
             <a href="you/registration">{{aboutYouLink}}</a></td>
           </tr>
-          <tr class='clickable-row' data-href='partner/partner'>
+          <tr class='clickable-row' data-href='partner/p-status'>
             <td>Partner status</td>
             <td><span id="about_partner_status" class="notstarted-text">{{aboutPartnerStatus}}</span> 
-            <a href="partner/partner">{{aboutPartnerLink}}</a></td>
+            <a href="partner/p-status">{{aboutPartnerLink}}</a></td>
           </tr>
           <tr class='clickable-row' data-href='assets/property'>
             <td>Property, savings &amp; money</td>
