--- a/app/views/lis/8/live/living-summary.html
+++ b/app/views/lis/8/live/living-summary.html
@@ -116,12 +116,12 @@
         <td><a href="others/hours">Change this</a></td>
       </tr>
         <tr>
-        <td>How much do they receive before tax and national insurance are taken off?</td>
+        <td>How much do they get before tax and national insurance are taken off?</td>
         <td>£400 per week</td>
         <td><a href="others/hours">Change this</a></td>
       </tr>
         <tr>
-        <td>Do they receive any of the following benefits?</td>
+        <td>Do they get any of the following benefits?</td>
         <td>No</td>
         <td><a href="others/benefits">Change this</a></td>
       </tr>
