--- a/app/views/lis/8/live/others/amount.html
+++ b/app/views/lis/8/live/others/amount.html
@@ -56,7 +56,7 @@
       {{
         form_macros.amount_field({
           id: 'money-amount',
-          label: 'How much do they receive before tax and national insurance are taken off?'
+          label: 'How much do they get before tax and national insurance are taken off?'
         })
       }}
 
