--- a/app/views/lis/8/live/others/benefits.html
+++ b/app/views/lis/8/live/others/benefits.html
@@ -14,9 +14,9 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-          Do they receive any of the following?
+          Do you get any of these benefits?
       </h1>
-      <p>Tick all that apply</p>
+      <p>Select all the benefits you get.</p>
 
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
@@ -78,7 +78,7 @@
           <div class="form-group">
             <input type="checkbox" id="none" name="bgroup">
             <label class="form-control-checkbox" for="none">
-              They <span class ="bold">do not</span> receive any of these
+              They <span class ="bold">do not</span> get any of these
             </label>
           </div>
           {{
