--- a/app/views/lis/8/live/you-live.html
+++ b/app/views/lis/8/live/you-live.html
@@ -40,7 +40,7 @@
       <div class="form-group">
         <input type="radio" id="homeless" value="homeless" name="home">
         <label class="form-control-radio" for="homeless">
-          I <span class ="bold">do not</span> have a permanent address
+          I do not have a permanent address
         </label>
       </div>
     </div>  
