--- a/app/views/lis/8/partner/benefits/benefit7.html
+++ b/app/views/lis/8/partner/benefits/benefit7.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Does your partner receive any other social security benefit?
+        Does your partner get any other social security benefit?
       </h1>
   
       <form action="" method="get" class="form">
