--- a/app/views/lis/8/partner/full.html
+++ b/app/views/lis/8/partner/full.html
@@ -61,7 +61,7 @@
     <table class="data-table you-summary">
         <p><strong>Partner's pension(s)</strong></p>
       <tr>
-        <td>Does your partner receive a pension?</td>
+        <td>Does your partner get a pension?</td>
         <td>Yes</td>
         <td><a href="pension/pension">Change this</a></td>
       </tr>
