--- a/app/views/lis/8/partner/pension/credit-amount.html
+++ b/app/views/lis/8/partner/pension/credit-amount.html
@@ -14,11 +14,8 @@
     <div class="column-two-thirds">  
       
       <h1 class="heading-large">
-        About your partner's Pension Credit Savings Credit
-      </h1>
-  
-      <h2 class="heading-medium">How often does your partner receive their Pension Credit Savings Credit payments?</h2>
-  
+How often does your partner get their Pension Credit Savings Credits?      </h1>
+    
       <form action="" method="get" class="form">
 
         <div class="form-item-wrapper">
@@ -56,7 +53,7 @@
         {{
           form_macros.amount_field({
             id: 'money-amount',
-            label: 'How much do they receive?'
+            label: 'How much do they get?'
           })
         }}
       
