--- a/app/views/lis/8/partner/pension/pension-amount.html
+++ b/app/views/lis/8/partner/pension/pension-amount.html
@@ -53,7 +53,7 @@
     {{
       form_macros.amount_field({
         id: 'money-amount',
-        label: 'How much does your partner receive?'
+        label: 'How much does your partner get?'
       })
     }}
 
