--- a/app/views/lis/8/partner/pension/private-pension-amount.html
+++ b/app/views/lis/8/partner/pension/private-pension-amount.html
@@ -52,7 +52,7 @@ How often does your partner get their private pension payments?  </h1>
     {{
       form_macros.amount_field({
         id: 'money-amount',
-        label: 'How much does your partner receive?'
+        label: 'How much does your partner get?'
       })
     }}
 
