--- a/app/views/lis/8/save-continue/code.html
+++ b/app/views/lis/8/save-continue/code.html
@@ -31,7 +31,7 @@
           })
         }}
         
-        <p class="navigation"><a class="cancel" href="">I didn't receive a code</a></p>
+        <p class="navigation"><a class="cancel" href="">I didn't get a code</a></p>
 
   </form>
     </div>
