--- a/app/views/lis/8/you/benefits/ctc.html
+++ b/app/views/lis/8/you/benefits/ctc.html
@@ -16,7 +16,7 @@
     About your child tax credits
   </h1>
   
-  <h2 class="heading-medium">How often do you receive your child tax credit payments?</h2>
+  <h2 class="heading-medium">How often do you get your child tax credit payments?</h2>
   
   <form action="ctc-handler" method="get" class="form">
 
