--- a/app/views/lis/8/you/benefits/mobility-component.html
+++ b/app/views/lis/8/you/benefits/mobility-component.html
@@ -37,7 +37,7 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do you receive?
+            Which weekly rate do they get?
           </label>
           <br>
           <div class="form-group">
