--- a/app/views/lis/8/you/benefits/pip-mobility-component.html
+++ b/app/views/lis/8/you/benefits/pip-mobility-component.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Does your personal independence payment include the mobility component?
+    Do you get the mobility component of Personal Independence Payment?
   </h1>
 
   <form action="" method="get" class="form">
@@ -35,19 +35,19 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do you receive?
+            Which weekly rate do you get?
           </label>
           <br>
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Standard rate
+              Lower (£21.80)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Enhanced rate
+              Highest (£57.45)
             </label>
           </div>
         </div>
