--- a/app/views/lis/8/you/benefits/pip.html
+++ b/app/views/lis/8/you/benefits/pip.html
@@ -36,19 +36,19 @@ Do you get the daily living component of Personal Independence Payment?  </h1>
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do you receive?
+            Which weekly rate do you get?
           </label>
           <br>
           <div class="form-group">
             <input type="radio" id="low" name="contact">
             <label class="form-control-radio js-toggle" for="low" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Standard rate
+             Standard (£55.10)
             </label>
           </div>
           <div class="form-group">
             <input type="radio" id="middle" name="contact">
             <label class="form-control-radio js-toggle" for="middle" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              Enhanced rate
+              Enhanced (£82.30)
             </label>
           </div>
         </div>
