--- a/app/views/lis/8/you/pension/credit-amount.html
+++ b/app/views/lis/8/you/pension/credit-amount.html
@@ -14,11 +14,9 @@
     <div class="column-two-thirds">  
       
       <h1 class="heading-large">
-        About your Pension Credit Savings Credit
+        How often do you get your Pension Credit Savings Credit payments?
       </h1>
-  
-      <h2 class="heading-medium">How often do you receive your Pension Credit Savings Credit payments?</h2>
-  
+    
       <form action="" method="get" class="form">
 
         <div class="form-item-wrapper">
@@ -56,7 +54,7 @@
         {{
           form_macros.amount_field({
             id: 'money-amount',
-            label: 'How much do you receive?'
+            label: 'How much do you get?'
           })
         }}
       
