--- a/app/views/lis/8/live/others/alevel.html
+++ b/app/views/lis/8/live/others/alevel.html
@@ -17,7 +17,7 @@
         Are they studying a course no higher than A Level, Scottish highers or equivalent?
       </h1> 
       
-      <p>Do not include work received through an employer</p>
+      <p>Do not include training received through an employer</p>
 
       <form action="others-education-handler" method="get" class="form">
         <div class="form-item-wrapper">
