--- a/app/views/lis/8/live/tax-amount.html
+++ b/app/views/lis/8/live/tax-amount.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    How much council tax do you pay[Every calender month]?
+    How much council tax do you pay every {{taxfreq}}?
   </h1>
     
   <form action="" method="get" class="form">
