--- a/app/views/lis/8/partner/benefits/benefit-sprint3.html
+++ b/app/views/lis/8/partner/benefits/benefit-sprint3.html
@@ -70,7 +70,7 @@ Does your partner get any of these benefits?  </h1>
       <div class="form-group">
         <input type="checkbox" id="none" value="none" name="sprint3benefits">
         <label class="form-control-checkbox" for="none">
-          They <span class ="bold">do not</span> receive any of these
+          They <span class ="bold">do not</span> get any of these
         </label>
       </div>
     </div>
