--- a/app/views/lis/8/partner/benefits/pip-mobility-component.html
+++ b/app/views/lis/8/partner/benefits/pip-mobility-component.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Does your personal independence payment include the mobility component?
+    Does their personal independence payment include the mobility component?
   </h1>
 
   <form action="" method="get" class="form">
@@ -35,7 +35,7 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do you receive?
+            Which weekly rate do they get?
           </label>
           <br>
           <div class="form-group">
