--- a/app/views/lis/8/partner/benefits/pip.html
+++ b/app/views/lis/8/partner/benefits/pip.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Does your personal independence payment include the daily living component?
+    Does their personal independence payment include the daily living component?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
@@ -37,7 +37,7 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            Which rate do you receive?
+            Which weekly rate do they receive?
           </label>
           <br>
           <div class="form-group">
