--- a/app/views/lis/8/partner/p-status.html
+++ b/app/views/lis/8/partner/p-status.html
@@ -1,7 +1,3 @@
-
-
-
-
 {% extends 'templates/nhs_transaction_layout.html' %}
 {% import 'includes/form_macros.html' as form_macros %}
 
@@ -27,14 +23,14 @@
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="yes" name="partner" value="yes">
-              <label class="form-control-radio" for="yes">
+              <input type="radio" id="pyes" name="partner" value="yes">
+              <label class="form-control-radio" for="pyes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="no" name="partner" value="no">
-              <label class="form-control-radio" for="no">
+              <input type="radio" id="pno" name="partner" value="no">
+              <label class="form-control-radio" for="pno">
                 No
               </label>
             </div>
@@ -55,5 +51,7 @@
     </div>
     </div>
 </main>
+
+<p class="hidden" id="partner-status">{{partnerstatus}}</p>
 
 {% endblock %}
