--- a/app/views/lis/8/save-continue/ref.html
+++ b/app/views/lis/8/save-continue/ref.html
@@ -32,7 +32,7 @@
               <label class="form-label-bold" for="email">
                 Email address (optional)
               </label>
-              <p>Enter your email address and we will email a copy of your registration number.</p>
+              <p>Enter your email address and we will email a copy of your application number.</p>
               <input type="text" id="email" name="email" class="form-control">
             </div>
           </fieldset>
