--- a/app/views/lis/8/you/benefits/benefit7.html
+++ b/app/views/lis/8/you/benefits/benefit7.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Do you receive any other social security benefit?
+        Do you get any other social security benefit?
       </h1>
   
       <form action="" method="get" class="form">
