--- a/app/views/lis/8/you/contact-prefs.html
+++ b/app/views/lis/8/you/contact-prefs.html
@@ -17,30 +17,32 @@
         How would you like us to contact you?
       </h1>
       
+      <p>Select all the ways we can get in touch.</p>
+      
       <form action="contact-handler" method="get" class="form">
 
         <div class="form-group">
-          <input type="radio" id="email" name="contact" value="email">
-          <label class="form-control-radio minor-radio" for="email">
+          <input type="checkbox" id="email" name="contact" value="email">
+          <label class="form-control-checkbox minor-checkbox" for="email">
             Email
           </label>
         </div>
         <div class="form-group">
-          <input type="radio" id="telephone" name="contact" value="telephone">
-          <label class="form-control-radio minor-radio" for="telephone">
+          <input type="checkbox" id="text" name="contact" value="text">
+          <label class="form-control-checkbox minor-checkbox" for="text">
+            Text
+          </label>
+        </div>
+        <div class="form-group">
+          <input type="checkbox" id="telephone" name="contact" value="telephone">
+          <label class="form-control-checkbox minor-checkbox" for="telephone">
             Telephone
           </label>
         </div>
         <div class="form-group">
-          <input type="radio" id="both" name="contact" value="both">
-          <label class="form-control-radio minor-radio" for="both">
-            Both email and telephone
-          </label>
-        </div>
-        <div class="form-group">
-          <input type="radio" id="none" name="contact" value="none">
-          <label class="form-control-radio minor-radio" for="none">
-            I do not have an email address or a telephone
+          <input type="checkbox" id="post" name="contact" value="post">
+          <label class="form-control-checkbox minor-checkbox" for="post">
+            Post
           </label>
         </div>
         <div class="form-group">
