--- a/app/views/lis/8/you/pension/employment-pension-amount.html
+++ b/app/views/lis/8/you/pension/employment-pension-amount.html
@@ -53,7 +53,7 @@
     {{
       form_macros.amount_field({
         id: 'money-amount',
-        label: 'How much do you receive?'
+        label: 'How much do you get?'
       })
     }}
 
