--- a/app/views/lis/8/you/pension/pension-amount.html
+++ b/app/views/lis/8/you/pension/pension-amount.html
@@ -54,7 +54,7 @@
     {{
       form_macros.amount_field({
         id: 'amount',
-        label: 'How much do you receive?'
+        label: 'How much do you get?'
       })
     }}
 
