--- a/app/views/lis/8/you/telephone.html
+++ b/app/views/lis/8/you/telephone.html
@@ -11,53 +11,57 @@
     
   <div class="grid-row">
     <div class="column-two-thirds">
-  <h1 class="heading-large">
-    Would you like to use <br> {{telephone}}?
-  </h1>
-
-  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
       
-  <form action="" method="get" class="form">
-<div class="form-item-wrapper">
-      <fieldset>
-        <div class="inline-form-groups">
-          <div class="form-group">
-            <input type="radio" id="mobile" name="contact">
-            <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
-              Yes, contact me on this telephone number
-            </label>
-          </div>
-          <div class="form-group">
-            <input type="radio" id="email" name="contact">
-            <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-              No, contact me on a different telephone number
-            </label>
-          </div>
-        </div>
+      <h1 class="heading-large">
+        Should we use {{telephone}} to contact you?
+      </h1>
 
-        <div class="js-hidden panel-indent" id="contact-email-address">
-        {{
-          form_macros.text_field({
-            id: 'firstname',
-            label: 'Telephone number'
-          })
-        }}
-        </div>
-      </fieldset>
+      <form action="" method="get" class="form">
+
+        <div class="form-item-wrapper">
+
+          <fieldset>
+            <div class="form-group">
+              <input type="radio" id="mobile" name="contact">
+              <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
+                Yes
+              </label>
+              </div>
+
+              <div class="form-group">
+                <input type="radio" id="email" name="contact">
+                <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
+                    No, contact me on a different telephone number
+                </label>
+              </div>
+            </fieldset>
+
+          </div>
+
+          <div class="js-hidden panel-indent" id="contact-email-address">
+            {{
+              form_macros.text_field({
+                id: 'firstname',
+                label: 'Telephone number'
+              })
+            }}
+          </div>
+
+          {{
+            form_macros.button({
+              label: 'Save and continue',
+              href: 'work' 
+            })
+          }}
+
+      </form>
+
+      <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+
     </div>
-
-    {{
-      form_macros.button({
-        label: 'Save and continue',
-        href: 'work' 
-      })
-    }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
-
-  </form>
-    </div>
-    </div>
+  </div>
+  
 </main>
 
 {% endblock %}
