added arrow pagination

--- a/app/views/sprint8.html
+++ b/app/views/sprint8.html
@@ -50,6 +50,14 @@
   </ul>
 
   <br>
+
+    <h3><span class="strong">Help with Health Costs content:</span> </h3>
+
+  <ul class="list">
+    <li><a href="/lis/8/hwhc/start">Start</a></li>
+    </ul>
+
+  <br>
   <!--
   <h3><span class="strong">What we plan to test: </span> </h3>
 
