--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -896,6 +896,11 @@ tr.clickable-row { cursor: pointer; }
   padding : 0 11px;
 }
 
+.navigation-links > li {
+list-style: none;
+}
+
+
 .pagination {
   .pag-right {
     text-align:  right;
@@ -927,3 +932,22 @@ tr.clickable-row { cursor: pointer; }
     }
   }
 }
+
+table, {
+    border-collapse: collapse;
+border-spacing: 5px;
+margin: 1em 0 2em;
+    width: 100%;}
+    th, article th {
+    line-height: 1.25em;
+    text-align: left;
+    font-weight: 700;
+        border-bottom: solid 1px #bfc1c3;
+    }
+
+    td {
+        border-bottom: solid 1px #bfc1c3;}
+        td,th {
+    font-size: 16px;
+            line-height: 1.25;
+    padding: .75em .5em .75em 0;}
