--- a/app/views/lis/8/hwhc/matex.html
+++ b/app/views/lis/8/hwhc/matex.html
@@ -15,11 +15,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="">1. Introduction to help with health costs</a></li>
-        <li>2. people aged under 16</li>
-        <li><a href="">3. people aged 16, 17 or 18</a></li>
-        <li><a href="">4. people aged 19</a></li>
-        <li><a href="">5. people aged over 60</a></li>
+        <li><a href="start">1. Introduction to help with health costs</a></li>
+        <li><a href="u16">2. people aged under 16</a></li>
+        <li><a href="18">3. people aged 16, 17 or 18</a></li>
+        <li><a href="19">4. people aged 19</a></li>
+        <li><a href="60">5. people aged over 60</a></li>
       </ul>
 
     </div>
@@ -27,11 +27,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="">6. people who get benefits</a></li>
-        <li><a href="">7. people who have a long term medical condition</a></li>
-        <li><a href="">8. people who are pregnant or have had a baby in the last twelve months</a></li>
-        <li><a href="">9. people who have little money to live on</a></li>
-        <li><a href="">10. people who want to save money on regular prescriptions</a></li>
+        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="medex">7. people who have a long term medical condition</a></li>
+        <li>8. people who are pregnant or have had a baby in the last twelve months</li>
+        <li><a href="lis">9. people who have little money to live on</a></li>
+        <li><a href="ppc">10. people who want to save money on regular prescriptions</a></li>
       </ul>
     </div>
   </div>
