--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -3472,6 +3472,10 @@ tr.clickable-row {
   padding: 0 11px;
 }
 
+.navigation-links > li {
+  list-style: none;
+}
+
 .pagination .pag-right {
   text-align: right;
   display: block;
@@ -3501,4 +3505,28 @@ tr.clickable-row {
   float: right;
   padding-bottom: 3px;
   width: 80%;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 5px;
+  margin: 1em 0 2em;
+  width: 100%;
+}
+
+th, article th {
+  line-height: 1.25em;
+  text-align: left;
+  font-weight: 700;
+  border-bottom: solid 1px #bfc1c3;
+}
+
+td {
+  border-bottom: solid 1px #bfc1c3;
+}
+
+td, th {
+  font-size: 16px;
+  line-height: 1.25;
+  padding: .75em .5em .75em 0;
 }
