--- a/app/views/lis/8/hwhc/ppc.html
+++ b/app/views/lis/8/hwhc/ppc.html
@@ -14,6 +14,7 @@
 </style>
 
 <main id="content" role="main">
+  <link rel="stylesheet" href="/public/stylesheets/pagination.css">
 
   <div class="grid-row">
 
@@ -106,17 +107,16 @@
 
       </div>
 
-      <div class="pagination">
-        <div class="pag-right">
-          <p>
-            <a href="#">
-              <span class="pag-graphic"></span>
-              <span class="pag-title">Next</span>
-              <span class="pag-label">help for people aged 16,<br>17 or 18</span>
-            </a>
-          </p>
-        </div>
-      </div>
+        <nav class="pagination_gds" role="navigation" aria-label="Pagination">
+            <ul class="group">
+                  <li class="previous">
+                    <a title="Navigate to previous part" rel="prev" href="lis">
+                      <span class="pagination-label">Previous</span>
+                      <span class="pagination-part-title">help for people who have little money to live on</span>
+                    </a>
+                  </li>
+            </ul>
+          </nav>
 
     </div>
 
