--- a/app/views/lis/8/hwhc/start.html
+++ b/app/views/lis/8/hwhc/start.html
@@ -75,8 +75,8 @@
         <nav class="pagination_gds" role="navigation" aria-label="Pagination">
             <ul class="group">
                   <li class="next">
-                    <a title="Navigate to next part" rel="next" href="hc3-documents">
-                      <span class="pagination-label">Next</span> <span class="pagination-part-title">Get your certificate</span>
+                    <a title="Navigate to next part" rel="next" href="u16">
+                      <span class="pagination-label">Next</span> <span class="pagination-part-title">People aged 16 and under</span>
                     </a>
                   </li>
             </ul>
