--- a/app/views/lis/8/hwhc/medex.html
+++ b/app/views/lis/8/hwhc/medex.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <main id="content" role="main">
+  <link rel="stylesheet" href="/public/stylesheets/pagination.css">
 
   <div class="grid-row">
 
