--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -951,3 +951,9 @@ margin: 1em 0 2em;
     font-size: 16px;
             line-height: 1.25;
     padding: .75em .5em .75em 0;}
+
+
+    .additional-info{
+        padding: 1rem 2rem 1rem 4rem;
+        background: rgba(0, 114, 198, 0.1) url("/public/images/icon-information.png") 1rem no-repeat;
+    }
