--- a/app/views/lis/8/hwhc/18.html
+++ b/app/views/lis/8/hwhc/18.html
@@ -46,7 +46,7 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">3. Help for people aged 16, 17 or 18</h2>
+          <h2 class="heading-medium">Help for people aged 16, 17 or 18</h2>
         </div>
 
         <h3 class="heading-small">Those not in full time education</h3>
