--- a/app/views/lis/8/hwhc/lis.html
+++ b/app/views/lis/8/hwhc/lis.html
@@ -46,7 +46,7 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">2. The low income scheme</h2>
+          <h2 class="heading-medium">The low income scheme</h2>
         </div>
 
        <p>You can already claim help with health costs if you have an NHS Tax Credit Exemption Certificate or get any of these benefits:</p>
