--- a/app/views/lis/8/hwhc/matex.html
+++ b/app/views/lis/8/hwhc/matex.html
@@ -46,7 +46,7 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">2. Help for people who are pregnant or have had a baby in the last twelve months</h2>
+          <h2 class="heading-medium">Help for people who are pregnant or have had a baby in the last twelve months</h2>
         </div>
 
         <p>
