--- a/app/views/lis/8/hwhc/ppc.html
+++ b/app/views/lis/8/hwhc/ppc.html
@@ -57,7 +57,7 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">10. Save money on multiple prescriptons</h2>
+          <h2 class="heading-medium">Save money on multiple prescriptons</h2>
         </div>
 <!--        <p>The current cost of a prescription in England is <strong>£8.40</strong>.<br>-->
            If you often get more than one prescription a month, you could save money with a Prescription Prepayment Certificate.
