--- a/app/views/lis/8/hwhc/start.html
+++ b/app/views/lis/8/hwhc/start.html
@@ -46,7 +46,7 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">1. Introduction to help with health costs</h1>
+          <h2 class="heading-medium">Introduction to help with health costs</h1>
         </div>
 
         <p>If you receive treatment in an NHS hospital this is usually free but there are a number of things which there may be charges for.</p>
