--- a/app/views/lis/8/hwhc/19.html
+++ b/app/views/lis/8/hwhc/19.html
@@ -3,6 +3,11 @@
 {% block content %}
 
 <main id="content" role="main">
+ <style>
+     .panel-indent-body{
+         padding:  0.3rem 1rem 0.8rem 1rem;
+     }
+</style>
   <link rel="stylesheet" href="/public/stylesheets/pagination.css">
 
   <div class="grid-row">
@@ -46,9 +51,39 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">4. Help for people aged 19</h2>
+          <h2 class="heading-medium">Help for people aged 19</h2>
         </div>
 
+         <h3 class="heading-small">Scotland</h3>
+
+        <p>If you are aged 19 and you live in Scotland, you are entitled to:</p>
+        <ul class="list list-bullet">
+          <li>Free NHS prescriptions</li>
+          <li>Free sight test</li>
+          <li>Free NHS dental check ups</li>
+        </ul>
+
+        <h3 class="heading-small">Wales</h3>
+
+        <p>If you are aged 19 and you live in Wales, you are entitled to:</p>
+        <ul class="list list-bullet">
+          <li>Free NHS prescriptions</li>
+          <li>Free NHS dental check ups</li>
+        </ul>
+
+
+        <h3 class="heading-small">Those in full time education</h3>
+
+
+        <p>If you are aged 19 and in full time education, you <strong>do not</strong> get help with health costs, unless:</p>
+        <ul class="list list-bullet">
+            <li>Your parents or guardian have a Tax Credits Exemption Certificate and are receiving a Child Tax Credit payment for you.</li>
+             <li>Your parents or guardian are in receipt of:
+             <p class="panel-indent-body">vgqgcvq</p</li>
+
+        </ul>
+                       <p><a class="button" href="#">Help me work out if I can get help with health costs</a></p>
+        </div>
 
         <nav class="pagination_gds" role="navigation" aria-label="Pagination">
             <ul class="group">
