--- a/app/views/lis/8/hwhc/benefits.html
+++ b/app/views/lis/8/hwhc/benefits.html
@@ -46,7 +46,7 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">2. Help for people aged 60 and over</h2>
+          <h2 class="heading-medium">Help for people aged 60 and over</h2>
         </div>
 
         <p>You get free:</p>
