--- a/app/views/lis/8/hwhc/medex.html
+++ b/app/views/lis/8/hwhc/medex.html
@@ -46,32 +46,35 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">2. Help for people with a long term medical condition</h2>
+          <h2 class="heading-medium">Help for people with a long term medical condition</h2>
         </div>
 
         <p>
-          People with certain medical conditions may be able to get a medical exemption certificate from their doctor which will give them free NHS prescriptions.
+          People with certain medical conditions may give free NHS prescriptions.
         </p>
 
-        <p>The medical conditions include: </p>
-        <ul>
-          <li>a permanent fistula (for example, caecostomy, colostomy, laryngos-tomy or ileostomy) which needs continuous surgical dressing or an appliance;
-          <li>a form of hypoadrenalism (for example, Addison’s Disease) for which specific substitution therapy is essential;</li>
-          <li>diabetes insipidus and other forms of hypopituitarism;</li>
-          <li>diabetes mellitus, except where treatment is by diet alone;</li>
-          <li>hypoparathyroidism;</li>
-          <li>myasthenia gravis;</li>
-          <li>myxoedema (that is, hypothyroidism which needs thyroid hormone replacement);</li>
-          <li>epilepsy which needs continuous anticonvulsive therapy;</li>
-          <li>a continuing physical disability which means you cannot go out without the help of another person; or</li>
-          <li>cancer and are undergoing treatment for:</li>
+              <ul class="list-bullet">
+                 <li><strong>Diabetes</strong>
+                    <br>Where treatment is not by diet alone
+                 </li>
+                 <li><strong>Cancer and are undergoing treatment</strong>
+                     <br>Including treatment for the effects of cancer or the effects of cancer treatment.</li>
 
-          <li>- cancer;</li>
-          <li>- the effects of cancer; or,</li>
-          <li>- the effects of cancer treatment.</li>
-        </ul>
+                 <li><strong>Epilepsy</strong> <br>Which needs anti-epileptic drugs (AEDs)</li>
 
-        <p>If you are not sure about the name of your condition, check with your doctor</p>
+                 <li><strong>A continuing physical disability</strong>
+                     <br>Which means you cannot go out without the help of another person</li>
+
+                 <li><strong>You need a continuous surgical dressing or an appliance</strong>
+                     <br>Like a tracheotomy or need to use a stoma</li>
+
+                 <li><strong>An underactive thyroid (hypothyroidism)</strong>
+                     <br>Which needs hormone replacement</li>
+              </ul>
+
+
+          <div class="additional-info">If you have a illness that is not listed or you unsure about the name of your condition, check with your doctor, who can advice you about free prescriptions. </div>
+          <br>
  <p>You may:</p>
         <ul class="list list-bullet">
           <li>May get help towards the cost of repair or replacement of glasses or contact lenses</li>
