--- a/app/views/lis/8/hwhc/u16.html
+++ b/app/views/lis/8/hwhc/u16.html
@@ -46,7 +46,7 @@
       <div class="text">
 
         <div class="heading-group">
-          <h2 class="heading-medium">2. Help for people aged 16 and under</h2>
+          <h2 class="heading-medium">Help for people aged 16 and under</h2>
         </div>
 
         <p>If you are under 16 you get free:</p>
