--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -3530,3 +3530,8 @@ td, th {
   line-height: 1.25;
   padding: .75em .5em .75em 0;
 }
+
+.additional-info {
+  padding: 1rem 2rem 1rem 4rem;
+  background: rgba(0, 114, 198, 0.1) url("/public/images/icon-information.png") 1rem no-repeat;
+}
