added changes to body copy to 19, 60 and benefits

--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -957,3 +957,15 @@ margin: 1em 0 2em;
         padding: 1rem 2rem 1rem 4rem;
         background: rgba(0, 114, 198, 0.1) url("/public/images/icon-information.png") 1rem no-repeat;
     }
+
+    .additional-info-no-image{
+        padding: 1rem 2rem 1rem 1.5rem;
+        background: rgba(0, 114, 198, 0.1);
+    }
+
+.panel-indent-body{
+      clear: both;
+      border-left: 6px solid #eff3f5;
+      padding:  0.3rem 1rem 0.8rem 1rem;
+    line-height: 2.5rem;
+}
