--- a/app/views/lis/8/hwhc/60.html
+++ b/app/views/lis/8/hwhc/60.html
@@ -20,7 +20,7 @@
         <li><a href="u16">2. people aged under 16</a></li>
         <li><a href="18">3. people aged 16, 17 or 18</a></li>
         <li><a href="19">4. people aged 19</a></li>
-        <li>5. people aged over 60</a></li>
+        <li>5. people aged 60 or over</a></li>
       </ul>
 
     </div>
@@ -28,11 +28,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="benefits">6. people who get benefits or tax credits</a></li>
         <li><a href="medex">7. people who have a long term medical condition</a></li>
         <li><a href="matex">8. people who are pregnant or have had a baby in the last twelve months</a></li>
         <li><a href="lis">9. people who have little money to live on</a></li>
-        <li><a href="ppc">10. people who want to save money on regular prescriptions</a></li>
+        <li><a href="ppc">10. people with regular prescriptions</a></li>
       </ul>
     </div>
   </div>
@@ -52,18 +52,38 @@
         <p>You get free:</p>
         <ul class="list list-bullet">
           <li>NHS prescriptions</li>
+          <li>NHS sight tests</li>
+          <li style="list-style-type:none">and</li>
+          <li>NHS dental check-ups, if you live in Scotland or Wales.</li>
+        </ul><br>
+
+         <h3 class="headin-small">If you get Pension Credit Guarantee Credit</h3>
+         <p>You get free:</p>
+        <ul class="list list-bullet">
+          <li>NHS prescriptions</li>
+          <li>NHS dental treatment for any course of treatment</li>
+          <li>NHS sight tests</li>
+          <li>NHS wigs and fabric supports</li>
         </ul>
         <p>You also:</p>
         <ul class="list list-bullet">
+        <li>Get help towards the cost of glasses or contact lenses</li>
           <li>May get help towards the cost of repair or replacement of glasses or contact lenses</li>
           <li>May get help with travel costs for NHS treatment.</li>
-                    <li>NHS dental treatment for any course of treatment</li>
-          <li>NHS sight tests</li>
-          <li>NHS wigs and fabric supports</li>
-
         </ul>
 
-        <p><a class="button" href="#">Help me work out if I can get help with health costs</a></p>
+        <div class="additional-info-no-image">
+        <h3 class="heading-medium">You could still get help with your health costs</h3>
+        <p>You do not have to get benefits to get help. If after your housing costs, you, your partner, or you both have less than:</p>
+<ul>
+    <li>£16,000 in savings, investments or properties – not including where you live</li>
+    <li>£23,250 in savings, investments or properties if you permanently live in a care home</li>
+    </ul>
+    <a href="lis">Help for people who have little money to live on</a>
+ </div>
+        <br>
+
+        <p><a class="button button-get-started" href="#">Help me work out if I can get help with health costs</a></p>
 
       </div>
 
