--- a/app/views/lis/8/hwhc/lis.html
+++ b/app/views/lis/8/hwhc/lis.html
@@ -20,7 +20,7 @@
         <li><a href="u16">2. people aged under 16</a></li>
         <li><a href="18">3. people aged 16, 17 or 18</a></li>
         <li><a href="19">4. people aged 19</a></li>
-        <li><a href="60">5. people aged over 60</a></li>
+        <li><a href="60">5. people aged 60 or over</a></li>
       </ul>
 
     </div>
@@ -28,11 +28,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="benefits">6. people who get benefits or tax credits</a></li>
         <li><a href="medex">7. people who have a long term medical condition</a></li>
         <li><a href="matex">8. people who are pregnant or have had a baby in the last twelve months</a></li>
         <li>9. people who have little money to live on</li>
-        <li><a href="ppc">10. people who want to save money on regular prescriptions</a></li>
+        <li><a href="ppc">10. people with regular prescriptions</a></li>
       </ul>
     </div>
   </div>
@@ -49,17 +49,8 @@
           <h2 class="heading-medium">The low income scheme</h2>
         </div>
 
-       <p>You can already claim help with health costs if you have an NHS Tax Credit Exemption Certificate or get any of these benefits:</p>
 
-        <ul class="list list-bullet">
-          <li>Income Support</li>
-          <li>Pension Credit Guarantee Credit</li>
-          <li>Universal Credit</li>
-        </ul>
-
-        <p><a href="#">What you need to do if you are already able to get help.</a></p>
-
-        <h2 class="heading-large">If you need to apply for help</h2>
+        <h2 class="heading-small">If you need to apply for help</h2>
 
         <p>You could get help with your health costs if, after your housing costs, you, your partner, or you both have less than:</p>
 
@@ -71,10 +62,10 @@
         <p>You could get help towards your, your partner’s and your children’s:</p>
 
         <ul class="list list-bullet">
-          <li>NHS dental treatment</li>
           <li>NHS prescriptions</li>
-          <li>NHS wigs and fabric supports</li>
+          <li>NHS dental treatment</li>
           <li>sight tests, glasses and contact lenses</li>
+          <li>NHS wigs and fabric supports</li>
           <li>travel to receive NHS treatment if you were referred by a GP, hospital doctor, dentist or optician</li>
         </ul>
 
@@ -96,7 +87,7 @@
                     </a>
                   </li>
                   <li class="next">
-                    <a title="Navigate to next part" rel="next" href="medex">
+                    <a title="Navigate to next part" rel="next" href="ppc">
                       <span class="pagination-label">Next</span> <span class="pagination-part-title">Help for people with regular prescriptions</span>
                     </a>
                   </li>
