--- a/app/views/lis/8/hwhc/ppc.html
+++ b/app/views/lis/8/hwhc/ppc.html
@@ -31,7 +31,7 @@
         <li><a href="u16">2. people aged under 16</a></li>
         <li><a href="18">3. people aged 16, 17 or 18</a></li>
         <li><a href="19">4. people aged 19</a></li>
-        <li><a href="60">5. people aged over 60</a></li>
+        <li><a href="60">5. people aged 60 or over</a></li>
       </ul>
 
     </div>
@@ -39,11 +39,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="benefits">6. people who get benefits or tax credits</a></li>
         <li><a href="medex">7. people who have a long term medical condition</a></li>
         <li><a href="matex">8. people who are pregnant or have had a baby in the last twelve months</a></li>
         <li><a href="lis">9. people who have little money to live on</a></li>
-        <li>10. people who want to save money on regular prescriptions</li>
+        <li>10. people with regular prescriptions</li>
       </ul>
     </div>
   </div>
@@ -112,7 +112,7 @@
                   <li class="previous">
                     <a title="Navigate to previous part" rel="prev" href="lis">
                       <span class="pagination-label">Previous</span>
-                      <span class="pagination-part-title">help for people who have little money to live on</span>
+                      <span class="pagination-part-title">Help for people who have little money to live on</span>
                     </a>
                   </li>
             </ul>
