--- a/app/views/lis/8/hwhc/18.html
+++ b/app/views/lis/8/hwhc/18.html
@@ -17,10 +17,10 @@
 
       <ul class="navigation-links">
         <li><a href="start">1. Introduction to help with health costs</a></li>
-          <li><a href="u16">2. people aged 16 and under</a></li>
+          <li><a href="u16">2. people aged under 16</a></li>
         <li>3. people aged 16, 17 or 18</li>
         <li><a href="19">4. people aged 19</a></li>
-        <li><a href="60">5. people aged over 60</a></li>
+        <li><a href="60">5. people aged 60 or over</a></li>
       </ul>
 
     </div>
@@ -28,11 +28,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="benefits">6. people who get benefits or tax credits</a></li>
         <li><a href="medex">7. people who have a long term medical condition</a></li>
         <li><a href="matex">8. people who are pregnant or have had a baby in the last twelve months</a></li>
         <li><a href="lis">9. people who have little money to live on</a></li>
-        <li><a href="ppc">10. people who want to save money on regular prescriptions</a></li>
+        <li><a href="ppc">10. people with regular prescriptions</a></li>
       </ul>
     </div>
   </div>
@@ -56,7 +56,7 @@
           <li>Free NHS dental treatment for any course of treatment that starts before your 18th birthday</li>
         </ul>
 
-                <p><a class="button" href="#">Help me work out if I can get help with health costs</a></p>
+                <p><a class="button button-get-started" href="#">Help me work out if I can get help with health costs</a></p>
 
 
         <h3 class="heading-small">Those in full time education</h3>
@@ -82,7 +82,7 @@
                   <li class="previous">
                     <a title="Navigate to previous part" rel="prev" href="u16">
                       <span class="pagination-label">Previous</span>
-                      <span class="pagination-part-title">Help for people aged 16 and under</span>
+                      <span class="pagination-part-title">Help for people aged under 16</span>
                     </a>
                   </li>
                   <li class="next">
