--- a/app/views/lis/8/hwhc/19.html
+++ b/app/views/lis/8/hwhc/19.html
@@ -3,11 +3,6 @@
 {% block content %}
 
 <main id="content" role="main">
- <style>
-     .panel-indent-body{
-         padding:  0.3rem 1rem 0.8rem 1rem;
-     }
-</style>
   <link rel="stylesheet" href="/public/stylesheets/pagination.css">
 
   <div class="grid-row">
@@ -22,10 +17,10 @@
 
       <ul class="navigation-links">
         <li><a href="start">1. Introduction to help with health costs</a></li>
-        <li><a href="u16">2. people aged 16 and under</a></li>
+        <li><a href="u16">2. people aged under 16</a></li>
         <li><a href="18">3. people aged 16, 17 or 18</a></li>
         <li>4. people aged 19</li>
-        <li><a href="60">5. people aged over 60</a></li>
+        <li><a href="60">5. people aged 60 or over</a></li>
       </ul>
 
     </div>
@@ -33,11 +28,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="benefits">6. people who get benefits or tax credits</a></li>
         <li><a href="medex">7. people who have a long term medical condition</a></li>
         <li><a href="matex">8. people who are pregnant or have had a baby in the last twelve months</a></li>
         <li><a href="lis">9. people who have little money to live on</a></li>
-        <li><a href="ppc">10. people who want to save money on regular prescriptions</a></li>
+        <li><a href="ppc">10. people with regular prescriptions</a></li>
       </ul>
     </div>
   </div>
@@ -54,7 +49,7 @@
           <h2 class="heading-medium">Help for people aged 19</h2>
         </div>
 
-         <h3 class="heading-small">Scotland</h3>
+         <h3 class="heading-small">If you live in Scotland</h3>
 
         <p>If you are aged 19 and you live in Scotland, you are entitled to:</p>
         <ul class="list list-bullet">
@@ -63,7 +58,7 @@
           <li>Free NHS dental check ups</li>
         </ul>
 
-        <h3 class="heading-small">Wales</h3>
+        <h3 class="heading-small">If you live in Wales</h3>
 
         <p>If you are aged 19 and you live in Wales, you are entitled to:</p>
         <ul class="list list-bullet">
@@ -78,11 +73,17 @@
         <p>If you are aged 19 and in full time education, you <strong>do not</strong> get help with health costs, unless:</p>
         <ul class="list list-bullet">
             <li>Your parents or guardian have a Tax Credits Exemption Certificate and are receiving a Child Tax Credit payment for you.</li>
-             <li>Your parents or guardian are in receipt of:
-             <p class="panel-indent-body">vgqgcvq</p</li>
+             <li>Your parents or guardian are in receipt of:</li>
+            <p class="panel-indent-body">
+   Income Support,<br>
+    Universal Credit,<br>
+    Income based Job Seekers Allowance,<br>
+    Income related Employment and Support Allowance, or<br>
+    Pension Credit Guarantee Credit.
+       </p>
 
         </ul>
-                       <p><a class="button" href="#">Help me work out if I can get help with health costs</a></p>
+                       <p><a class="button button-get-started" href="https://helpwithhealth.herokuapp.com/sprints/8/start">Help me work out if I can get help with health costs</a></p>
         </div>
 
         <nav class="pagination_gds" role="navigation" aria-label="Pagination">
@@ -90,7 +91,7 @@
                   <li class="previous">
                     <a title="Navigate to previous part" rel="prev" href="18">
                       <span class="pagination-label">Previous</span>
-                      <span class="pagination-part-title">Help for people aged 16 and under</span>
+                      <span class="pagination-part-title">Help for people aged 16, 17 or 18</span>
                     </a>
                   </li>
                   <li class="next">
