--- a/app/views/lis/8/hwhc/medex.html
+++ b/app/views/lis/8/hwhc/medex.html
@@ -20,7 +20,7 @@
         <li><a href="u16">2. people aged under 16</a></li>
         <li><a href="18">3. people aged 16, 17 or 18</a></li>
         <li><a href="19">4. people aged 19</a></li>
-        <li><a href="60">5. people aged over 60</a></li>
+        <li><a href="60">5. people aged 60 or over</a></li>
       </ul>
 
     </div>
@@ -28,11 +28,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="benefits">6. people who get benefits or tax credits</a></li>
         <li>7. people who have a long term medical condition</li>
         <li><a href="matex">8. people who are pregnant or have had a baby in the last twelve months</a></li>
         <li><a href="lis">9. people who have little money to live on</a></li>
-        <li><a href="ppc">10. people who want to save money on regular prescriptions</a></li>
+        <li><a href="ppc">10. people with regular prescriptions</a></li>
       </ul>
     </div>
   </div>
@@ -75,31 +75,27 @@
 
           <div class="additional-info">If you have a illness that is not listed or you unsure about the name of your condition, check with your doctor, who can advice you about free prescriptions. </div>
           <br>
- <p>You may:</p>
-        <ul class="list list-bullet">
-          <li>May get help towards the cost of repair or replacement of glasses or contact lenses</li>
-          <li>May get help with travel costs for NHS treatment.</li>
-                    <li>NHS dental treatment for any course of treatment</li>
-          <li>NHS sight tests</li>
-          <li>NHS wigs and fabric supports</li>
 
-        </ul>
 
-        <p><a class="button" href="#">Help me work out if I can get help with health costs</a></p>
+        <p><a class="button button-get-started" href="#">Help me work out if I can get help with health costs</a></p>
 
       </div>
 
-      <div class="pagination">
-        <div class="pag-right">
-          <p>
-            <a href="#">
-              <span class="pag-graphic"></span>
-              <span class="pag-title">Next</span>
-              <span class="pag-label">help for people aged 16,<br>17 or 18</span>
-            </a>
-          </p>
-        </div>
-      </div>
+        <nav class="pagination_gds" role="navigation" aria-label="Pagination">
+            <ul class="group">
+                  <li class="previous">
+                    <a title="Navigate to previous part" rel="prev" href="benefits">
+                      <span class="pagination-label">Previous</span>
+                      <span class="pagination-part-title">Help for people who get benefits or tax credits</span>
+                    </a>
+                  </li>
+                  <li class="next">
+                    <a title="Navigate to next part" rel="next" href="matex">
+                      <span class="pagination-label">Next</span> <span class="pagination-part-title">Help for people who are pregnant or had a baby in the last 12 months</span>
+                    </a>
+                  </li>
+            </ul>
+          </nav>
 
     </div>
 
