--- a/app/views/lis/8/hwhc/start.html
+++ b/app/views/lis/8/hwhc/start.html
@@ -20,7 +20,7 @@
         <li><a href="u16">2. people aged 16 and under</a></li>
         <li><a href="18">3. people aged 16, 17 or 18</a></li>
         <li><a href="19">4. people aged 19</a></li>
-        <li><a href="60">5. people aged over 60</a></li>
+        <li><a href="60">5. people aged 60 or over</a></li>
       </ul>
 
     </div>
@@ -28,11 +28,11 @@
     <div class="column-one-half">
 
       <ul class="navigation-links">
-        <li><a href="benefits">6. people who get benefits</a></li>
+        <li><a href="benefits">6. people who get benefits or tax credits</a></li>
         <li><a href="medex">7. people who have a long term medical condition</a></li>
         <li><a href="matex">8. people who are pregnant or have had a baby in the last twelve months</a></li>
         <li><a href="lis">9. people who have little money to live on</a></li>
-        <li><a href="ppc">10. people who want to save money on regular prescriptions</a></li>
+        <li><a href="ppc">10. people with regular prescriptions</a></li>
       </ul>
     </div>
   </div>
@@ -68,7 +68,7 @@
 
         <p>You will need to show evidence to prove you are entitled to help.</p>
 
-        <p><a class="button" href="https://helpwithhealth.herokuapp.com/sprints/8/start">Help me work out if I can get help with health costs</a></p>
+        <p><a class="button button-get-started" href="https://helpwithhealth.herokuapp.com/sprints/8/start">Help me work out if I can get help with health costs</a></p>
 
       </div>
 
