added prepayment external link

--- a/app/views/lis/8/hwhc/18.html
+++ b/app/views/lis/8/hwhc/18.html
@@ -56,7 +56,7 @@
           <li>Free NHS dental treatment for any course of treatment that starts before your 18th birthday</li>
         </ul>
 
-                <p><a class="button button-get-started" href="#">Help me work out if I can get help with health costs</a></p>
+                <p><a class="button button-get-started" href="https://helpwithhealth.herokuapp.com/sprints/8/start">Help me work out if I can get help with health costs</a></p>
 
 
         <h3 class="heading-small">Those in full time education</h3>
