--- a/app/views/lis/8/hwhc/60.html
+++ b/app/views/lis/8/hwhc/60.html
@@ -83,7 +83,7 @@
  </div>
         <br>
 
-        <p><a class="button button-get-started" href="#">Help me work out if I can get help with health costs</a></p>
+        <p><a class="button button-get-started" href="https://helpwithhealth.herokuapp.com/sprints/8/start">Help me work out if I can get help with health costs</a></p>
 
       </div>
 
