--- a/app/views/lis/8/hwhc/ppc.html
+++ b/app/views/lis/8/hwhc/ppc.html
@@ -101,7 +101,7 @@
         </table>
 
 <br>
-        <p><a class="button button-get-started" href="#" id="next">Buy a certificate</a></p>
+        <p><a class="button button-get-started" href="https://apps.nhsbsa.nhs.uk/ppcwebsales/patient.do" id="next">Buy a certificate</a></p>
 
 
 
