--- a/app/views/lis/8/hwhc/lis.html
+++ b/app/views/lis/8/hwhc/lis.html
@@ -72,7 +72,7 @@
         <p>You can apply at any time. Do not wait until you need treatment.</p>
 
         <p>
-          <a class="button button-get-started" href="partner" id="next">Start a new application</a>
+          <a class="button button-get-started" href="../partner" id="next">Start a new application</a>
         </p>
 
 
